# TrafficScope

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.kaggle.txt  requirements.txt
backend/src/: app.py
backend/src/data/: app_data.py
backend/src/detectors/: no_helmet.py  overspeeding.py  person_finder.py  pothole.py  red_light_passing.py  traffic_control.py  vehicle_finder.py  wrong_way.py
backend/src/research/: dynamic_traffic_control.py  face_detect.py  no_helmet.py  overspeeding.py  red_light_violation.py  wrong_way_detection.py
backend/src/routes/: live_stream.py  websockets.py
backend/src/utils/: app_data_utils.py  image_utils.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/face-recognition/: page.tsx
frontend/app/dashboard/incidents/: page.tsx
frontend/app/dashboard/no-helmet/: page.tsx
frontend/app/dashboard/over-speeding/: page.tsx
frontend/app/dashboard/person-finder/: page.tsx
frontend/app/dashboard/pothole-detection/: page.tsx
frontend/app/dashboard/red-light-jumping/: page.tsx
frontend/app/dashboard/road-maintenance/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: detection-cards.tsx  detection-table.tsx  map-with-markers.tsx  sidebar.tsx  stream-video.tsx  theme-toggle.tsx  traffic-light.tsx  video-feed.tsx
frontend/context/: app-provider.tsx  index.tsx
frontend/lib/: constants.ts
frontend/types/: index.ts
(+7 files in other folders)
