[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvzone>=1.6.1",
    "deepface>=0.0.93",
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.115.12",
    "lap>=0.5.12",
    "opencv-python>=4.11.0.86",
    "supervision>=0.25.1",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tf-keras>=2.19.0",
    "ultralytics>=8.3.121",
    "uvicorn[standard]>=0.34.2",
]
